<resources>
    <string name="app_name">CaculatorAppDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_number">0</string>
    <string name="text_result">0</string>
    <string name="ac">AC</string>
    <string name="change_add_to_sub">+/-</string>
    <string name="mod">%</string>
    <string name="division">/</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="mutiplication">X</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="subtraction">-</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="addition">+</string>
    <string name="number_zezo">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="action_clear">action clear</string>
    <string name="action_save_last_result">action save last result</string>
</resources>
